--- a/src/containers/left_nav/css/left_nav.less
+++ b/src/containers/left_nav/css/left_nav.less
@@ -1,9 +1,15 @@
 .lefttitle{
-    height: 76px;
+    display: flex;
+    height: 77px;
     width: 100%;
-    font-size: 30px;
+    font-size: 26px;
     color: cadetblue;
     line-height: 80px;
-    text-align: center;
+    align-items: center;
     font-weight: bolder;
+    img{
+        width: 50px;
+        height: 50px;
+        margin: 0 10px;
+    }
 }
